# test_automation_ai

./: .gitignore  Makefile  README.md  SETUP.md  docker-compose.airflow.yml  docker-compose.yml
backend/: .dockerignore  .env.docker  .env.example  .env.host  Dockerfile  pyproject.toml
backend/alembic/: README.md  env.py
backend/app/: __init__.py  bootstrap.py  main.py
backend/app/airflow_dags/: data_quality_dag.py  regression_dag.py  stm_validation_dag.py
backend/app/core/: celery_app.py  config.py  config_loader.py  database.py  errors.py  logger.py  permissions.py  realtime.py  security.py  socketio.py
backend/app/core/base/: __init__.py  repository.py  service.py
backend/app/modules/ai_generator/: models.py  prompts.py  routes.py  schemas.py  service.py
backend/app/modules/app_settings/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/app/modules/audit_logs/: models.py  routes.py  schemas.py  service.py
backend/app/modules/auth/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/data_profiling/: models.py  routes.py  schemas.py  service.py
backend/app/modules/data_sources/: models.py  routes.py  schemas.py  service.py
backend/app/modules/environments/: models.py  routes.py  schemas.py  service.py
backend/app/modules/executions/: models.py  routes.py  schemas.py  service.py
backend/app/modules/metadata/: models.py  routes.py  schemas.py  service.py
backend/app/modules/no_code_flows/: compiler.py  models.py  routes.py  schemas.py  service.py
backend/app/modules/notifications/: models.py  routes.py  schemas.py  service.py
backend/app/modules/ops/: __init__.py  routes.py  schemas.py  service.py
backend/app/modules/projects/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/quality_monitoring/: models.py  routes.py  schemas.py  service.py
backend/app/modules/reports/: regressions.py  routes.py  schemas.py  service.py
backend/app/modules/schedules/: cron.py  models.py  redbeat_sync.py  routes.py  schemas.py  service.py
backend/app/modules/sql_generator/: models.py  routes.py  schemas.py  service.py
backend/app/modules/stm_converter/: models.py  routes.py  schemas.py  service.py
backend/app/modules/test_cases/: models.py  routes.py  schemas.py  service.py
backend/app/modules/test_suites/: models.py  routes.py  schemas.py  service.py
backend/app/modules/users/: models.py  routes.py  schemas.py  service.py
backend/app/runners/playwright_runner/: Dockerfile  runner.py
backend/app/runners/pytest_runner/: Dockerfile  runner.py
backend/app/runners/sql_runner/: Dockerfile  runner.py
backend/app/schemas/: __init__.py  common.py
backend/app/utils/: datetime.py  file_parser.py  http_errors.py  ids.py  pagination.py  sql_loader.py  sql_safety.py  sql_templates.py
backend/app/workers/: db.py
backend/app/workers/tasks/: ai_tasks.py  execution_tasks.py  metadata_tasks.py  profiling_tasks.py  schedule_tasks.py  stm_tasks.py
backend/config/: base.yaml  development.yaml  production.yaml  staging.yaml  test.yaml
backend/scripts/: _xlsx_style.py  build_api_workbook.py  build_excel_docs.py  build_schedule_workbook.py  build_stm_workbook.py  db_bootstrap.py
backend/sql/: README.md
backend/sql/init/: 01_create_database.sql
backend/sql/queries/health/: ping.sql
backend/sql/templates/stm/: duplicate_check.sql  null_check.sql  reference_check.sql  row_count.sql  (+1 more)
backend/tests/: test_app_settings_service.py  test_compiler.py  test_config_yaml.py  test_metadata_discovery.py  test_ops_service.py  test_regressions.py  test_schedule_cron.py  test_sql_loader.py  test_sql_safety.py  test_sql_templates.py
(+169 files in other folders)
